main.css
@font-face {
  font-family: Marvel;
  src: url('Marvel-Regular.ttf');
}
@viewport{
  width: device-width;
  zoom: 1.0;
}

html{
  /* background-color: #f0131e;
  background-image: linear-gradient(to bottom, red , yellow); */

}
#bg {
  position: fixed;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
}
#bg img {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  min-width: 50%;
  min-height: 50%;
}
body{
  cursor: url('./Images/prism.png'),auto;
  background:   url('./Images/plain-color-red-wallpaper-2.jpg') center;
}


                              /* CHARACTER LIST */
/* Character list header */
h1 {
  font-family: Marvel-regular, fallback, Arial;
  text-align: center;
  color: white;
  text-shadow: 2px 2px 10px grey;
  font-family: Marvel;
  text-transform: uppercase;
  font-size: 10em;
  margin-top: 0;
  margin-bottom:0;
  opacity: .95;
}

.divider{
  background-image: url('./Images/stars.png');
  transform: skewX(-30deg);
  width: 90%;
  height: 29px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  margin-bottom: 40px;
  box-shadow: 0 8px 6px -6px #312f2d;
  opacity: .85;
}
/* flexbox to contain hero img links */
div.container{
  margin-left: auto;
  margin-right: 300px;
  /* background: rgba(0, 0, 0, .6); */
  width: 99.5%;
  height: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-self: flex-start;
  color: white;
  justify-content:space-between;
  border-radius: 10px;
}

.boxes{
  width: 100px;
  height: 230px;
  /* border: 1px solid #000; */
  border-radius: 10px;
  margin: 5px;
  /* box-shadow: 0 8px 6px -6px #312f2d; */
  color: transparent;
  display: block;
  overflow: hidden;
  scroll-behavior: none;
  opacity: .83;
}
.boxes:hover{
  min-width: 50vh;
  min-height: 25vh;
  transform: scale(1);
  background: url(./Images/stars.png);
  scroll-behavior: auto;
  position:static;
  box-shadow: 0 20px 15px -11px #312f2d;
  opacity: 1;
}
.boxes:hover .info{
  color: white;
  text-align: justify;
}
.info{
  margin-right: 10px;
  margin-left: 3px;
}
#characterPic{
  /* border-radius: 10px 10px 0px 0px; */
  float: left;
  border-radius: 10px 10px 10px 10px;
  box-shadow: 0 8px 6px -6px #312f2d;
  margin-right: 5px;
}
#characterPic:hover{
  border-radius: 10px 10px 0px 0px;
  border-radius: 10px 10px 10px 10px;
}
.name{
  color: white;
  text-align: center;
  font-family: Arial;
  letter-spacing: .3px;
}
/* .name:hover{
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 10px;
  text-shadow: 0 8px 6px -6px #312f2d;
  border-style: outset;
} */

                                /* SEARCH BAR */
.topNav{
background-image:url(./Images/MarvelBackground.png);
opacity: .8;
}
.topNav:hover{
  opacity: 1;
  transform: scale(1.01);
  box-shadow: 0 8px 6px -6px #312f2d;

}

/* Search box value */
/* input[type=text] {
  width: 100px;
  transition: width 0.4s ease-in-out;
} */

/* When the input field gets focus, change its width to 40% */
/* input[type=text]:focus {
  width: 40%;

} */

/* Home button */
.topNav a.home{
  font-family: Marvel-Regular;
  text-transform: uppercase;
  font-size: 3em;
  margin-right: 20% ;
  margin-left: 25px;
  color: white;
}
a.home:hover{
  color:red;
  text-shadow: 2px 2px 10px grey;

}

.MarvelLogo{
  max-width: 19.1%;
  height: auto;
  float: right;
  padding-top: 0;
  background-color: #f0131e;
  /* box-shadow: 0 8px 6px -6px #312f2d; */
  border-left: 1px solid rgb(0,0,0,.5);

}
#Logo{
  max-width: 100%;
  max-height: 100%;
}

.copyright{
  color: rgba(0,0,0,.7);
  text-shadow: 0 1px rgba(255, 255, 255, 0.1);
  text-align: center;
}

